k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localgallery-frontend
  template:
    metadata:
      labels:
        app: localgallery-frontend
    spec:
      containers:
      - name: frontend
        image: localgallery-frontend
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: localgallery-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
